# content-engine

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SETUP.md  agents.md  docker-compose.bootstrap.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  config.py  database.py  log_config.py  main.py  requirements.txt
backend/migrations/: env.py
backend/models/: __init__.py  analytics.py  brain.py  content.py  db_types.py  embeddings.py  engagement.py  notifications.py  research.py  settings.py  user.py  user_credentials.py
backend/services/: settings_router.py
backend/tests/: conftest.py  test_analytics.py  test_brain.py  test_config.py  test_content.py  test_e2e_pipeline.py  test_engagement.py  test_linkedin_oauth.py  test_notifications.py  test_observability.py  test_publish_notify_dedupe.py  test_publishing.py  test_queue_failures.py  test_research.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/nginx/: Dockerfile  init-certs.sh  nginx.conf  renew-certs.sh
infra/ops-agent/: config.yaml
infra/terraform/: .terraform.lock.hcl  README.md  artifact_registry.tf  dns.tf  iam.tf  locals.tf  main.tf  network.tf  outputs.tf  secrets.tf  (+5 more)
scripts/: install_ops_agent.sh  local_prod_validate.sh  manual_trigger.py  obtain_letsencrypt.sh  repair_vm_stack.sh  seed_db.py  smoke_test.sh  test_linkedin_oauth.py  update_cloud_dns.py  vm_pull_prod.sh  vm_registry_login.sh
(+134 files in other folders)
